--- a/css/estilo.css
+++ b/css/estilo.css
@@ -21,6 +21,7 @@ header nav{
     color: rgb(190, 190, 190);
     text-transform: uppercase;
     font-family: sans-serif;
+    font-weight:500;
 }
 header nav ul:not(.inner-list){
     list-style: none;
