--- a/css/estilo.css
+++ b/css/estilo.css
@@ -5,7 +5,12 @@ body, body *{
     padding: 0;
 }
 body{
-    background-color: rgb(228, 228, 228);
+    background-color: rgb(248, 248, 248);
+    color: rgb(46, 46, 46);
+}
+a{
+    text-decoration: none;
+    color: black;
 }
 header, footer{
     background-image: linear-gradient(rgba(0, 0, 0, 0.87) 10%, black 80%), url('../imagens/headerbg.png');
@@ -95,11 +100,14 @@ header img{
 header p{
     text-align: center;
 }
+article{
+    margin-bottom: 10%;
+}
 section{
-    width: 80%;
+    width: 70%;
     margin: auto;
 }
-section p{
+section{
     font-size: 1.2em;
     line-height: 1.5;
     font-family: 'Times New Roman', Times, serif;
@@ -122,33 +130,50 @@ table{
     border-collapse: collapse;
     width: 80%;
     margin: auto;
+    font-family: 'sans-serif';
+    box-shadow: 0px 0px 10px black;
 }
 table td, table th{
-    border: 2px solid black;
+    border: 1px solid rgb(139, 139, 139);
     padding: 2% 1%;
     font-size: 1.5em;
+    font-family: 'Times New Roman', Times, serif;
 }
 table td{
-    font-size: 1.2em;
-    color: rgb(32, 26, 26);
+    font-size: 1em;
+    color: rgb(66, 26, 26);
 }
-table tr:nth-child(2n){
-    background-color: rgb(211, 211, 211);
+table tbody tr:hover{
+    background-color:rgb(235, 235, 235);
 }
-table tr:nth-child(2n-1):not(thead tr){
-    background-color: rgb(165, 165, 165);
+table tr{
+    background-color: rgb(255, 255, 255);
 }
 table th:first-child, table td:first-child{
     text-align: center;
     width: 30%;
 }
 thead tr{
-    border-bottom: 5px solid rgb(12, 12, 43);
-    background-color: rgb(88, 90, 173);
-    color: rgb(0, 0, 0);
+    border-bottom: 2px solid rgb(119, 119, 119);
+    background-color: rgb(179, 215, 241);
+    color: rgb(31, 31, 31);
 }
 
 /* CLASSES */
+.curriculum{
+    text-align: center;
+    margin: 10%;
+    font-size: 1.5em;
+}
+.curriculum a{
+    color:rgb(11, 19, 54);
+    border-bottom: dotted 2px rgb(0, 168, 154);
+    transition: all .3s;
+}
+.curriculum a:hover{
+    color:rgb(0, 116, 106);
+    border-bottom: dotted 2px transparent;
+}
 .hidden{
     display: none;
 }
@@ -186,7 +211,7 @@ thead tr{
 .btn{
     padding: 1%;
     border-radius: 10px;
-    font-size: 1.2em;
+    font-size: 1em;
     width: 80%;
     margin: 3% auto;
     color: rgb(59, 59, 59);
